# duo-clean

./: .dockerignore  .gitignore  Country.FD_Info.txt  Dockerfile  FD_Update.py  README.md  adult-labeled.FD_Info.txt  adult.FD_Info.txt  chess.FD_Info.txt  cities.FD_Info.txt  ctane.py  datacleaner.bmpr  db.sqlite3  manage.py  pip-requirements.txt  pip_reqs.txt  pip_requirements.txt  requirements.txt
datacleaner/: admin.py  helpers.py  models.py  urls.py  views.py
duo-server/: .dockerignore  api.py  build_container.sh  helpers.py  requirements.txt
duo-server-new/: api.py  converter.py  helpers.py
duo-ui/: package-lock.json  package.json
mockup/: datacleaner.bmpr
old-ui/: package.json
react-vc-app/: Dockerfile  build_container.sh  package-lock.json  package.json
server/: Dockerfile  analyze-out.txt  analyze.py  anonymize.py  api.py  build_container.sh  converter.py  eval_h.py  helpers.py  hypothesis.py  old-api.py  old-plot.py  out.txt  out1.txt  pkl2json.py  plot-results.py  plot-sims.py  plot.py  plot_results.py  preprocessing.py  requirements.txt  run-analysis.py  (+7 more)
vc-server/xplode-master/: CMakeCache.txt  CMakeLists.txt  CTane  Makefile  XPlode.cbp  cmake_install.cmake  main.cpp
vc-server/xplode-master/algorithms/: .xplode.cpp.swp  partitiontable.cpp  partitiontable.h  xplode.cpp  xplode.h
vc-server/xplode-master/datasets/: team-dirty_25.csv
vc-server/xplode-master/dirtysets/: Soccer_cfds_order_2.txt  abalone_cfds_order_2.txt  abalone_cfds_order_3.txt  abalone_dirty_10pct_1cfd_1.csv  adult_cfds_order_3.txt
vc-server/xplode-master/util/: setutil.h
(+501 files in other folders)
